<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2A4689">

    <ScrollView
        android:layout_width="331dp"
        android:layout_height="707dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="210dp"
                    android:layout_height="169dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logo_kgm" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Inicia sesion con otra cuenta"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgviewFacebook"
                    android:layout_width="133dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/icono_facebook" />

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="129dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/icono_google_plus" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="146dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/icono_twitter" />

            </LinearLayout>

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="257dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/grey_edit"
                android:ems="10"
                android:hint="@string/gmail"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="#636363"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="257dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/grey_edit"
                android:ems="10"
                android:hint="@string/pass"
                android:inputType="textPersonName|textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="#636363"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnLogin"
                style="@android:style/Widget.Button"
                android:layout_width="193dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="22dp"
                android:background="@drawable/btn_blue"
                android:backgroundTint="@color/purple_500"
                android:text="@string/iniciar_Sesion"
                android:textColor="#ffffff"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="197dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    android:text="Olvide mi contraseña?"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btncambiopass"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#D11A1A"
                    android:text="Clik Aqui!" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>